Revise all changes, many updates.
