# internal/models/projects.go
@@ -2,24 +2,26 @@ package models
 
 import "net/http"
 
+// TODO: Distinguish Full and Brief Outputs
+
 // Project is a project that a user is a member of.
 type Project struct {
-	ProjectID          int          `json:"project_id" readOnly:"true" doc:"Unique project identifier"`
-	ProjectHandle      string       `json:"project_handle" minLength:"3" maxLength:"20" example:"my-gpt-4" doc:"Project handle"`
-	Owner              string       `json:"owner" readOnly:"true" doc:"User handle of the project owner"`
-	Description        string       `json:"description,omitempty" maxLength:"255" doc:"Description of the project."`
-	MetadataScheme     string       `json:"metadataScheme,omitempty" doc:"Metadata json scheme used in the project."`
-	AuthorizedReaders  []string     `json:"authorizedReaders,omitempty" default:"" example:"[\"jdoe\",\"foobar\"]" doc:"Account names allowed to retrieve information from the project. Defaults to everyone ([\"*\"])"`
-	LLMServices        []LLMService `json:"llmServices,omitempty" doc:"LLM services used in the project"`
-	NumberOfEmbeddings int          `json:"number_of_embeddings" readOnly:"true" doc:"Number of embeddings in the project"`
+	ProjectID          int        `json:"project_id" readOnly:"true" doc:"Unique project identifier"`
+	ProjectHandle      string     `json:"project_handle" minLength:"3" maxLength:"20" example:"my-gpt-4" doc:"Project handle"`
+	Owner              string     `json:"owner" readOnly:"true" doc:"User handle of the project owner"`
+	Description        string     `json:"description,omitempty" maxLength:"255" doc:"Description of the project."`
+	MetadataScheme     string     `json:"metadataScheme,omitempty" doc:"Metadata json scheme used in the project."`
+	AuthorizedReaders  []string   `json:"authorizedReaders,omitempty" default:"" example:"[\"jdoe\",\"foobar\"]" doc:"Account names allowed to retrieve information from the project. Defaults to everyone ([\"*\"])"`
+	Instances          []Instance `json:"instances,omitempty" doc:"LLM services used in the project"`
+	NumberOfEmbeddings int        `json:"number_of_embeddings" readOnly:"true" doc:"Number of embeddings in the project"`
 }
 
 type ProjectSubmission struct {
-	ProjectHandle     string       `json:"project_handle" minLength:"3" maxLength:"20" example:"my-gpt-4" doc:"Project handle"`
-	Description       string       `json:"description,omitempty" maxLength:"255" doc:"Description of the project."`
-	MetadataScheme    string       `json:"metadataScheme,omitempty" doc:"Metadata json scheme used in the project."`
-	AuthorizedReaders []string     `json:"authorizedReaders,omitempty" default:"" example:"[\"jdoe\",\"foobar\"]" doc:"Account names allowed to retrieve information from the project. Defaults to everyone ([\"*\"])"`
-	LLMServices       []LLMService `json:"llmServices,omitempty" doc:"LLM services used in the project"`
+	ProjectHandle     string     `json:"project_handle" minLength:"3" maxLength:"20" example:"my-gpt-4" doc:"Project handle"`
+	Description       string     `json:"description,omitempty" maxLength:"255" doc:"Description of the project."`
+	MetadataScheme    string     `json:"metadataScheme,omitempty" doc:"Metadata json scheme used in the project."`
+	AuthorizedReaders []string   `json:"authorizedReaders,omitempty" default:"" example:"[\"jdoe\",\"foobar\"]" doc:"Account names allowed to retrieve information from the project. Defaults to everyone ([\"*\"])"`
+	Instances         []Instance `json:"instances,omitempty" doc:"LLM services used in the project"`
 }
 
 // Request and Response structs for the project administration API
